// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCourseRunPage renders html correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={
          Object {
            "data": Object {
              "actions": Object {
                "POST": Object {
                  "level_type": Object {
                    "choices": Array [
                      Object {
                        "display_name": "Beginner",
                        "value": "beginner",
                      },
                      Object {
                        "display_name": "Intermediate",
                        "value": "intermediate",
                      },
                      Object {
                        "display_name": "Advanced",
                        "value": "advanced",
                      },
                    ],
                  },
                  "subjects": Object {
                    "child": Object {
                      "choices": Array [
                        Object {
                          "display_name": "Business",
                          "value": "business",
                        },
                        Object {
                          "display_name": "Chemistry",
                          "value": "chemistry",
                        },
                        Object {
                          "display_name": "English",
                          "value": "english",
                        },
                        Object {
                          "display_name": "Security",
                          "value": "security",
                        },
                      ],
                    },
                  },
                  "type": Object {
                    "type_options": Array [
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "credit",
                              "verified",
                              "audit",
                            ],
                            "name": "Credit",
                            "uuid": "f17e29d6-4648-4bb5-a199-97dc40f904aa",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "verified",
                        ],
                        "name": "Credit",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "credit",
                              "is_credit_eligible": true,
                              "is_id_verified": true,
                              "name": "Credit",
                              "payee": "platform",
                              "slug": "credit",
                            },
                            "seat_type": Object {
                              "name": "Credit",
                              "slug": "credit",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": Object {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "9521aa7d-801b-4a67-92c3-716ea30f5086",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": false,
                            "modes": Array [
                              "masters",
                            ],
                            "name": "Masters Only",
                            "uuid": "f394732f-ba43-4260-8ada-06a9f18e7160",
                          },
                        ],
                        "entitlement_types": Array [],
                        "name": "Masters Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Masters",
                              "payee": "organization",
                              "slug": "masters",
                            },
                            "seat_type": null,
                          },
                        ],
                        "uuid": "7b41992e-f268-4331-8ba9-72acb0880454",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "verified",
                        ],
                        "name": "Verified and Audit",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": Object {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "8a8f30e1-23ce-4ed3-a361-1325c656b67b",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "professional",
                            ],
                            "name": "Professional Only",
                            "uuid": "6cebfc50-abca-4674-b4c7-249b31af6ddb",
                          },
                        ],
                        "entitlement_types": Array [
                          "professional",
                        ],
                        "name": "Professional Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "professional",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Professional",
                              "payee": "platform",
                              "slug": "professional",
                            },
                            "seat_type": Object {
                              "name": "Professional",
                              "slug": "professional",
                            },
                          },
                        ],
                        "uuid": "fdde7d04-7ce0-4ff7-ac90-7f518e90ac1e",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "audit",
                        ],
                        "name": "Audit Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "03e09c15-4127-4031-bc02-e20fcbdf09f0",
                      },
                    ],
                  },
                },
              },
            },
            "error": null,
            "isFetching": false,
          }
        }
        courseRunLabels={Array []}
        courseRunOptions={Object {}}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          Object {
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when creating 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunLabels={Array []}
        courseRunOptions={Object {}}
        courseRunTypeOptions={Array []}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          Object {
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={true}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={Object {}}
        courseRunLabels={Array []}
        courseRunOptions={Object {}}
        courseRunTypeOptions={Array []}
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          Object {
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
      <StatusAlert
        alertType="danger"
        className="mt-3"
        dismissible={false}
        iconClassNames={Array []}
        id="create-error"
        message={
          Array [
            "failed",
            <br />,
          ]
        }
        onClose={[Function]}
        title={null}
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when fetching 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <LoadingSpinner
      message="Loading…"
    />
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly with Course Type 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={
          Object {
            "data": Object {
              "actions": Object {
                "POST": Object {
                  "level_type": Object {
                    "choices": Array [
                      Object {
                        "display_name": "Beginner",
                        "value": "beginner",
                      },
                      Object {
                        "display_name": "Intermediate",
                        "value": "intermediate",
                      },
                      Object {
                        "display_name": "Advanced",
                        "value": "advanced",
                      },
                    ],
                  },
                  "subjects": Object {
                    "child": Object {
                      "choices": Array [
                        Object {
                          "display_name": "Business",
                          "value": "business",
                        },
                        Object {
                          "display_name": "Chemistry",
                          "value": "chemistry",
                        },
                        Object {
                          "display_name": "English",
                          "value": "english",
                        },
                        Object {
                          "display_name": "Security",
                          "value": "security",
                        },
                      ],
                    },
                  },
                  "type": Object {
                    "type_options": Array [
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "credit",
                              "verified",
                              "audit",
                            ],
                            "name": "Credit",
                            "uuid": "f17e29d6-4648-4bb5-a199-97dc40f904aa",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "verified",
                        ],
                        "name": "Credit",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "credit",
                              "is_credit_eligible": true,
                              "is_id_verified": true,
                              "name": "Credit",
                              "payee": "platform",
                              "slug": "credit",
                            },
                            "seat_type": Object {
                              "name": "Credit",
                              "slug": "credit",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": Object {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "9521aa7d-801b-4a67-92c3-716ea30f5086",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": false,
                            "modes": Array [
                              "masters",
                            ],
                            "name": "Masters Only",
                            "uuid": "f394732f-ba43-4260-8ada-06a9f18e7160",
                          },
                        ],
                        "entitlement_types": Array [],
                        "name": "Masters Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Masters",
                              "payee": "organization",
                              "slug": "masters",
                            },
                            "seat_type": null,
                          },
                        ],
                        "uuid": "7b41992e-f268-4331-8ba9-72acb0880454",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "verified",
                        ],
                        "name": "Verified and Audit",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": Object {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "8a8f30e1-23ce-4ed3-a361-1325c656b67b",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "professional",
                            ],
                            "name": "Professional Only",
                            "uuid": "6cebfc50-abca-4674-b4c7-249b31af6ddb",
                          },
                        ],
                        "entitlement_types": Array [
                          "professional",
                        ],
                        "name": "Professional Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "professional",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Professional",
                              "payee": "platform",
                              "slug": "professional",
                            },
                            "seat_type": Object {
                              "name": "Professional",
                              "slug": "professional",
                            },
                          },
                        ],
                        "uuid": "fdde7d04-7ce0-4ff7-ac90-7f518e90ac1e",
                      },
                      Object {
                        "course_run_types": Array [
                          Object {
                            "is_marketable": true,
                            "modes": Array [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": Array [
                          "audit",
                        ],
                        "name": "Audit Only",
                        "tracks": Array [
                          Object {
                            "mode": Object {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": Object {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "03e09c15-4127-4031-bc02-e20fcbdf09f0",
                      },
                    ],
                  },
                },
              },
            },
            "error": null,
            "isFetching": false,
          }
        }
        courseRunLabels={Array []}
        courseRunOptions={Object {}}
        courseRunTypeOptions={
          Array [
            Object {
              "label": "Select enrollment track",
              "value": "",
            },
            Object {
              "label": "Verified and Audit",
              "value": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
            },
            Object {
              "label": "Audit Only",
              "value": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
            },
          ]
        }
        courseTypeUuid="8a8f30e1-23ce-4ed3-a361-1325c656b67b"
        currentFormValues={Object {}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          Object {
            "rerun": "",
            "run_type": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;
